# sdl-game-android

./: .gitignore  .gitmodules  README.md
app/: build.gradle
app/jni/: CMakeLists.txt  SDL2  SDL2_ttf
app/jni/src/: CMakeLists.txt  client_udp.c  constans.h  font.c  main.c  menu.c  network.h  objects.c  objects.h  physic.c  server_udp.c  ui.c  ui.h  utils.c  utils.h
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
